--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/almendra_sc</item>
         <item>@font/lily_script_one</item>
+        <item>@font/nunito_sans_light</item>
         <item>@font/trade_winds</item>
     </array>
 </resources>
