--- a/app/src/main/res/layout/activity_data_page.xml
+++ b/app/src/main/res/layout/activity_data_page.xml
@@ -357,9 +357,28 @@
                 android:textSize="20sp" />
         </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/disasterhop"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/ic_disastermanagement" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Disaster"
+            android:textColor="#083359"
+            android:textSize="20sp" />
     </LinearLayout>
 
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/nav_datapage"
         android:layout_width="match_parent"
