--- a/app/src/main/res/layout/activity_data_page.xml
+++ b/app/src/main/res/layout/activity_data_page.xml
@@ -296,6 +296,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/faqhop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
