--- a/app/src/main/res/layout/activity_data_details.xml
+++ b/app/src/main/res/layout/activity_data_details.xml
@@ -128,6 +128,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/faqtop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
