--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1865,6 +1865,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/faqpop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
