--- a/app/src/main/res/layout/activity_data_page.xml
+++ b/app/src/main/res/layout/activity_data_page.xml
@@ -403,21 +403,21 @@
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_home_unsel" />
+            app:srcCompat="@drawable/ic_home_unsel_updated" />
 
         <ImageView
             android:id="@+id/datapage_hotel"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_hotel_unsel" />
+            app:srcCompat="@drawable/ic_hotel_unsel_updated" />
 
         <ImageView
             android:id="@+id/datapage_menu"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_menu_unsel" />
+            app:srcCompat="@drawable/ic_menu_unsel_updated" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
