--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,9 @@
         <item>@font/almendra_sc</item>
         <item>@font/lily_script_one</item>
         <item>@font/nunito_sans_light</item>
+        <item>@font/poppins_light</item>
+        <item>@font/poppins_medium</item>
+        <item>@font/poppins_semibold</item>
         <item>@font/trade_winds</item>
     </array>
 </resources>
